# hlbmerge_flutter

./: .gitignore  .gitmodules  .metadata  README.md  pubspec.yaml
.github/workflows/: release_android-dev.yml  release_android.yml  release_linux.yml  release_mac.yml  release_windows.yml
android/: .gitignore  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
android/CommonModule/: build.gradle.kts
android/DataManage/DataProviderModule/: build.gradle.kts
android/DataManage/DataStoreModule/: build.gradle.kts
android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
ffmpeg_hl/: .gitignore  .metadata  README.md  pubspec.yaml
ffmpeg_hl/android/: build.gradle
ffmpeg_hl/android/src/main/: AndroidManifest.xml
ffmpeg_hl/example/: README.md  pubspec.yaml
ffmpeg_hl/example/android/app/: build.gradle
ffmpeg_hl/example/integration_test/: plugin_integration_test.dart
ffmpeg_hl/example/ios/Runner/: Info.plist
ffmpeg_hl/example/ios/Runner.xcodeproj/: project.pbxproj
ffmpeg_hl/example/ios/RunnerTests/: RunnerTests.swift
ffmpeg_hl/example/lib/: main.dart
ffmpeg_hl/example/linux/: CMakeLists.txt  my_application.cc
ffmpeg_hl/example/ohos/: oh-package.json5
ffmpeg_hl/example/ohos/AppScope/: app.json5
ffmpeg_hl/example/test/: widget_test.dart
ffmpeg_hl/example/web/: index.html  manifest.json
ffmpeg_hl/example/windows/: CMakeLists.txt
ffmpeg_hl/ios/: ffmpeg_hl.podspec
ffmpeg_hl/ios/Classes/: FfmpegHlPlugin.swift
ffmpeg_hl/lib/: ffmpeg_hl.dart  ffmpeg_hl_common.dart  ffmpeg_hl_method_channel.dart  ffmpeg_hl_platform_interface.dart  ffmpeg_hl_web.dart
ffmpeg_hl/lib/beans/: Pair.dart  Triple.dart
ffmpeg_hl/lib/utils/: FFmpegHlStrUtil.dart
ffmpeg_hl/linux/: CMakeLists.txt  ffmpeg_hl_plugin.cc  ffmpeg_hl_plugin_private.h
ffmpeg_hl/linux/ffmpeg/: ffmpeg_merge.cpp  ffmpeg_merge.h
ffmpeg_hl/linux/include/ffmpeg_hl/: ffmpeg_hl_plugin.h
ffmpeg_hl/linux/test/: ffmpeg_hl_plugin_test.cc
ffmpeg_hl/macos/: ffmpeg_hl.podspec
ffmpeg_hl/macos/Classes/: FfmpegHlPlugin.swift
ffmpeg_hl/ohos/: index.ets  oh-package.json5
ffmpeg_hl/test/: ffmpeg_hl_method_channel_test.dart  ffmpeg_hl_test.dart
ffmpeg_hl/windows/: .gitignore  CMakeLists.txt  ffmpeg_hl_plugin.cpp  ffmpeg_hl_plugin.h  ffmpeg_hl_plugin_c_api.cpp
ffmpeg_hl/windows/ffmpeg/: ffmpeg_merge.cpp  ffmpeg_merge.h
ffmpeg_hl/windows/include/ffmpeg_hl/: ffmpeg_hl_plugin_c_api.h
ffmpeg_hl/windows/test/: ffmpeg_hl_plugin_test.cpp
ffmpeg_xmake/: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml
ffmpeg_xmake/android/: build.gradle  settings.gradle
ffmpeg_xmake/assets/wasm/: ffmpeg_core.js  ffmpeg_core.wasm
ffmpeg_xmake/example/: .gitignore  .metadata  clean_ios_build.sh  pubspec.yaml
ffmpeg_xmake/example/lib/: main.dart
ffmpeg_xmake/example/linux/: CMakeLists.txt
ffmpeg_xmake/example/ohos/: build-profile.json5  oh-package.json5
ffmpeg_xmake/example/web/: index.html  manifest.json
ffmpeg_xmake/example/windows/: .gitignore  CMakeLists.txt
ffmpeg_xmake/ios/: ffmpeg_hl.podspec
ffmpeg_xmake/ios/Classes/: ffmpeg_hl.c
ffmpeg_xmake/lib/: ffmpeg_hl.dart  ffmpeg_interface.dart
ffmpeg_xmake/lib/ext/: ffi_ext.dart
ffmpeg_xmake/lib/g/: ffmpeg_hl_native_bindings.g.dart  ffmpeg_hl_web_bindings.g.dart
ffmpeg_xmake/lib/impl/: ffmpeg_native.dart  ffmpeg_stub.dart  ffmpeg_web.dart
ffmpeg_xmake/linux/: CMakeLists.txt
ffmpeg_xmake/macos/: ffmpeg_hl.podspec
ffmpeg_xmake/ohos/: oh-package.json5
ffmpeg_xmake/src/: CMakeLists.txt  ffmpeg_hl.c  ffmpeg_hl.h
ffmpeg_xmake/src/xmake/: build_android_ffmpeg.bat  build_harmony_ffmpeg.bat  build_ios_ffmpeg.sh  build_linux_ffmpeg.sh  build_mac_ffmpeg.sh  build_wasm_ffmpeg.bat  build_wasm_ffmpeg.sh  build_windows_ffmpeg.bat  clean_xmake_build.bat  xmake.lua
ffmpeg_xmake/src/xmake/include/: ffmpeg_merge.h
ffmpeg_xmake/src/xmake/src/: ffmpeg_merge.cpp
ffmpeg_xmake/windows/: CMakeLists.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/channel/main/: main_channel.dart  main_channel_android.dart  main_channel_common.dart  main_channel_interface.dart
lib/dao/: app_info.dart  cache_data_manager.dart  sp_data_manager.dart
lib/features/export/: base_export_file_server.dart  cache_data_manager.dart
lib/generate/pigeon/: flutter_native_api.g.dart
lib/log/: log.dart
lib/models/: cache_group.dart  cache_item.dart  cache_json_info.dart
lib/pages/: app_pages.dart
lib/pages/about/: about_logic.dart  about_state.dart  about_view.dart
lib/pages/home/: logic.dart  view.dart
lib/pages/main/: logic.dart  state.dart  view.dart
lib/pages/progress/: binding.dart  logic.dart  view.dart
lib/pages/settings/: logic.dart  view.dart
lib/pages/uitools/: DialogTool.dart
lib/repository/: app_repository.dart  settings_repository.dart
lib/service/ffmpeg/: ffmpeg_task.dart
lib/storage/: base_storage.dart
lib/storage/impl/: local_storage.dart
lib/utils/: FileUtil.dart  FileUtils.dart  GetxHttpUtils.dart  JsonUtils.dart  PlatformUtils.dart  StrUtil.dart  StrUtils.dart  app_util.dart  file_util.dart  json_util.dart  str_util.dart  toast_util.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/: Podfile
macos/Flutter/: Flutter-Release.xcconfig  GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
ohos/: build-profile.json5  oh-package.json5
ohos/AppScope/: app.json5
ohos/entry/: oh-package.json5
pigeons/: api.dart
res/appInfo/: AppInfo.json
res/tutorial/: README.md  Tutorial.md
script/: linux_ldd_debug_app.sh  linux_ldd_release_app.sh
test/: widget_test.dart
web/: index.html  manifest.json
windows/: .gitignore  CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+191 files in other folders)
